Update readme and src files links

--- a/2. Relaciones entre pixeles y metricas globales/trabajo-en-clase-op-basicas.ipynb
+++ b/2. Relaciones entre pixeles y metricas globales/trabajo-en-clase-op-basicas.ipynb
@@ -97,6 +97,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "!wget -q https://github.com/MoraRubio/dip-uam/raw/main/src/wrench.png"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -113,7 +122,7 @@
     "1.   Los valores de cada matriz de R,G,B deben estar en el rango de [0,1]. Adicionalmente, el rango de salida de HSV debe ser [0,1].\n",
     "2.   La relación entre los espacios de color es la siguiente:\n",
     "\n",
-    "<img src=\"src/rgb2hsv.png\" alt=\"Transformación de RGB a HSV\" style=\"height: 200px; width:300px;\"/>\n",
+    "<img src=\"https://github.com/MoraRubio/dip-uam/raw/main/src/rgb2hsv.png\" alt=\"Transformación de RGB a HSV\" style=\"height: 200px; width:300px;\"/>\n",
     "\n",
     "Imagen tomada de: [Modelo HSV](https://es.wikipedia.org/wiki/Modelo_de_color_HSV)"
    ]
