--- a/3. Operaciones geometricas y locales/filtrado-espacial-2.ipynb
+++ b/3. Operaciones geometricas y locales/filtrado-espacial-2.ipynb
@@ -29,6 +29,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!wget -q https://github.com/MoraRubio/dip-uam/raw/main/src/lenna.jpg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "input_image=cv2.imread('lenna.jpg', cv2.IMREAD_GRAYSCALE)\n",
     "img_max = np.max(input_image)\n",
     "img_min = np.min(input_image)\n",
