--- a/3. Operaciones geometricas y locales/operaciones-morfologicas.ipynb
+++ b/3. Operaciones geometricas y locales/operaciones-morfologicas.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "at4KhNda0wN-"
@@ -22,6 +23,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "EGAnrpPM03h3"
@@ -39,7 +41,7 @@
       "outputs": [],
       "source": [
         "# Descarga de las imágenes con las que vamos a trabajar\n",
-        "!wget -q https://github.com/MoraRubio/dip-uam/raw/main/img/paw.png https://github.com/MoraRubio/dip-uam/raw/main/img/shape2.png https://github.com/MoraRubio/dip-uam/raw/main/img/raptor.png https://github.com/MoraRubio/dip-uam/raw/main/img/triangle.jpg https://github.com/MoraRubio/dip-uam/raw/main/img/circuit.png https://github.com/MoraRubio/dip-uam/raw/main/img/pcb.png https://github.com/MoraRubio/dip-uam/raw/main/img/dots.png https://github.com/MoraRubio/dip-uam/raw/main/img/huella.png https://github.com/MoraRubio/dip-uam/raw/main/img/phantom.png"
+        "!wget -q https://github.com/MoraRubio/dip-uam/raw/main/src/paw.png https://github.com/MoraRubio/dip-uam/raw/main/src/shape2.png https://github.com/MoraRubio/dip-uam/raw/main/src/raptor.png https://github.com/MoraRubio/dip-uam/raw/main/src/triangle.jpg https://github.com/MoraRubio/dip-uam/raw/main/src/circuit.png https://github.com/MoraRubio/dip-uam/raw/main/src/pcb.png https://github.com/MoraRubio/dip-uam/raw/main/src/dots.png https://github.com/MoraRubio/dip-uam/raw/main/src/huella.png https://github.com/MoraRubio/dip-uam/raw/main/src/phantom.png"
       ]
     },
     {
@@ -120,6 +122,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "LlywHHopCHGP"
@@ -250,6 +253,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "o7H5zuILCHGQ"
@@ -327,6 +331,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "7Q-gW5HzMhUh"
@@ -336,6 +341,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "OkBRQ4lOCHGQ"
@@ -373,6 +379,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "C_GrP0iYCHGR"
@@ -396,6 +403,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "z9bcIIKURHb-"
@@ -433,6 +441,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "aZgXbIDfCHGR"
@@ -509,6 +518,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "vwJ8duMMCHGR"
@@ -546,6 +556,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "vX-C7LTBCHGS"
@@ -575,6 +586,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "ETaOpXX4CHGS"
@@ -623,6 +635,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "ToG_61F4d4Ac"
@@ -650,6 +663,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "6OzGb08pCHGS"
@@ -735,6 +749,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "gMo8HJxnCHGS"
