--- a/4. Transformaciones/transformaciones-1.ipynb
+++ b/4. Transformaciones/transformaciones-1.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "at4KhNda0wN-"
@@ -52,6 +53,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "EGAnrpPM03h3"
@@ -69,7 +71,7 @@
       "outputs": [],
       "source": [
         "# Descarga de las imágenes con las que vamos a trabajar\n",
-        "!wget -q https://github.com/MoraRubio/dip-uam/raw/main/img/lenna.jpg https://github.com/MoraRubio/dip-uam/raw/main/img/astronauta.png https://github.com/MoraRubio/dip-uam/raw/main/img/pcb.png"
+        "!wget -q https://github.com/MoraRubio/dip-uam/raw/main/src/lenna.jpg https://github.com/MoraRubio/dip-uam/raw/main/src/astronauta.png https://github.com/MoraRubio/dip-uam/raw/main/src/pcb.png"
       ]
     },
     {
@@ -140,6 +142,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "8pDYjbNco-OO"
@@ -312,6 +315,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "uV38Gul7TW9-"
@@ -350,6 +354,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "BrZc3op4TjyI"
@@ -390,6 +395,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "WEQoYzJYTMYr"
@@ -584,6 +590,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "ZvB_JCYBVrwk"
