--- a/5. Segmentacion/segmentacion-1.ipynb
+++ b/5. Segmentacion/segmentacion-1.ipynb
@@ -11,6 +11,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "EGAnrpPM03h3"
@@ -28,7 +29,7 @@
       "outputs": [],
       "source": [
         "# Descarga de las imágenes con las que vamos a trabajar\n",
-        "!wget -q https://github.com/MoraRubio/dip-uam/raw/main/img/lenna.jpg https://github.com/MoraRubio/dip-uam/raw/main/img/pcb.png https://github.com/MoraRubio/dip-uam/raw/main/img/building.jpg https://github.com/MoraRubio/dip-uam/raw/main/img/raptor.png https://github.com/MoraRubio/dip-uam/raw/main/img/circuit.png"
+        "!wget -q https://github.com/MoraRubio/dip-uam/raw/main/src/lenna.jpg https://github.com/MoraRubio/dip-uam/raw/main/src/pcb.png https://github.com/MoraRubio/dip-uam/raw/main/src/building.jpg https://github.com/MoraRubio/dip-uam/raw/main/src/raptor.png https://github.com/MoraRubio/dip-uam/raw/main/src/circuit.png"
       ]
     },
     {
